Implementa recuperação dos projetos do Colaborador na Visão
Por enquanto é só o carregamento das tabelas. Ainda não funciona porque faltam tabelas no banco.

--- a/SistemaAcademico/src/sistemaacademico/visao/VisaoColaborador.form
+++ b/SistemaAcademico/src/sistemaacademico/visao/VisaoColaborador.form
@@ -83,6 +83,9 @@
       </SubComponents>
     </Container>
     <Container class="javax.swing.JTabbedPane" name="painelAbas">
+      <Events>
+        <EventHandler event="stateChanged" listener="javax.swing.event.ChangeListener" parameters="javax.swing.event.ChangeEvent" handler="painelAbasStateChanged"/>
+      </Events>
 
       <Layout class="org.netbeans.modules.form.compat2.layouts.support.JTabbedPaneSupportLayout"/>
       <SubComponents>
